[package]
name = "rust-vergecore-rpc"
version = "0.6.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/justinvforvendetta/rust-vergecore-rpc/"
repository = "https://github.com/justinvforvendetta/rust-vergecore-rpc/"
description = "RPC client library for the Verge Core JSON-RPC API."
keywords = [ "crypto", "verge", "verge-core", "rpc" ]
readme = "README.md"

[lib]
name = "rust_vergecore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.6.0", path = "../json" }

log = "0.4.5"
jsonrpc = "0.11"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
hex = "0.3"

# Used for Verge-specific types.
bitcoin = { version = "0.18", features = [ "serde-decimal" ] }
bitcoin_hashes = "0.3"
bitcoin-amount = { version = "0.1.4", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "serde" ] }
num-bigint = { version = "0.2", features = [ "serde" ] }
