[package]
name = "vergecore-rpc-json"
version = "0.6.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/justinvforvendetta/rust-vergecore-rpc/"
repository = "https://github.com/justinvforvendetta/rust-vergecore-rpc/"
description = "JSON-enabled type structs for vergecore-rpc crate."
keywords = [ "crypto", "verge", "verge-core", "rpc" ]
readme = "README.md"

[lib]
name = "vergecore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.3"

verge = { version = "6.0.2", features = [ "serde-decimal" ] }
verge_hashes = "0.3"
verge-amount = { version = "0.1.4", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "serde" ] }
num-bigint = { version = "0.2", features = [ "serde" ] }
